// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`GuidedInstall AWS with awscli config runs \`aws configure\` commands 1`] = `
[
  [
    "aws configure set aws_access_key_id access key id --profile profile",
  ],
  [
    "aws configure set aws_secret_access_key secret access key --profile profile",
  ],
  [
    "aws configure set region region --profile profile",
  ],
]
`;

exports[`GuidedInstall AWS with awscli config shows the correct confirmation prompts for manual instructions 1`] = `
[
  [
    "Ensure your AWS account has the correct permissions.
	- You will need an IAM user (https://aws.amazon.com/premiumsupport/knowledge-center/create-access-key/) that can create access-keys and modify your billing settings.",
  ],
  [
    "Enable the Cost and Usage Reports Billing AWS feature.
	- This feature needs to be enabled so your account can start generating cost and usage reports.
	- To enable, navigate to your account's billing section, and click on the "Cost and Usage Reports" tab.
	- Make sure to select “Amazon Athena” for report data integration.
	- Reference Cost and Usage Reports documentation here: https://docs.aws.amazon.com/cur/latest/userguide/what-is-cur.html.",
  ],
  [
    "Setup Athena DB to save the Cost and Usage Reports.
	- In addition to generating reports, we use Athena DB to save the details of those reports in a DB, so we can run queries on them.
	- This is a standard AWS integration, outlined here: https://docs.aws.amazon.com/cur/latest/userguide/cur-query-athena.html",
  ],
  [
    "Install the AWS CLI https://docs.aws.amazon.com/cli/latest/userguide/cli-chap-install.html",
  ],
  [
    "Configure aws credentials locally, using awscli. See the documentation for more details on authenticating to AWS.",
    "Would you like this tool to configure your awscli? If no, you will need to do it yourself.",
    false,
  ],
]
`;

exports[`GuidedInstall AWS with awscli config shows the correct informational messages and documentation references 1`] = `
[
  [
    "Please select an option below to begin guided setup for your Cloud Carbon Footprint app. To complete multiple configuration options (i.e. setup multiple cloud providers), please repeat this script for each additional option. For an understanding of the default configurations and other setup options, please visit the docs on the microsite: https://cloudcarbonfootprint.org/docs/introduction",
  ],
  [
    "AWS setup. See https://cloudcarbonfootprint.org/docs/aws for additional details.",
  ],
  [
    "Configuring AWS CLI...",
  ],
  [
    "...done",
    false,
  ],
  [
    "Your Cloud Carbon Footprint application's configuration has been updated. You can view these settings in the .env files listed above. To complete additional setup (i.e. add an additional cloud provider), please re-run this script. For questions or more configuration options, please visit https://cloudcarbonfootprint.org/docs/introduction",
  ],
  [
    "Please make sure your appConfig object in the client Config file (packages/client/src/Config.ts) includes your cloud provider(s) in the CURRENT_PROVIDERS array",
  ],
]
`;

exports[`GuidedInstall AWS with awscli config shows the correct input prompts for collecting env vars 1`] = `
[
  [
    "Enter AWS account id:",
  ],
  [
    "Enter AWS account name:",
  ],
  [
    "Enter AWS region:",
  ],
  [
    "Enter AWS role name:",
  ],
  [
    "Enter Athena DB name:",
  ],
  [
    "Enter Athena DB table:",
  ],
  [
    "Enter Athena DB query result location (eg s3://your-athena-query-results-location):",
  ],
  [
    "Enter AWS access key id:",
  ],
  [
    "Enter AWS secret access key:",
  ],
  [
    "Optionally enter AWS profile:",
    false,
  ],
]
`;

exports[`GuidedInstall AWS without awscli config shows the correct confirmation prompts for manual instructions 1`] = `
[
  [
    "Ensure your AWS account has the correct permissions.
	- You will need an IAM user (https://aws.amazon.com/premiumsupport/knowledge-center/create-access-key/) that can create access-keys and modify your billing settings.",
  ],
  [
    "Enable the Cost and Usage Reports Billing AWS feature.
	- This feature needs to be enabled so your account can start generating cost and usage reports.
	- To enable, navigate to your account's billing section, and click on the "Cost and Usage Reports" tab.
	- Make sure to select “Amazon Athena” for report data integration.
	- Reference Cost and Usage Reports documentation here: https://docs.aws.amazon.com/cur/latest/userguide/what-is-cur.html.",
  ],
  [
    "Setup Athena DB to save the Cost and Usage Reports.
	- In addition to generating reports, we use Athena DB to save the details of those reports in a DB, so we can run queries on them.
	- This is a standard AWS integration, outlined here: https://docs.aws.amazon.com/cur/latest/userguide/cur-query-athena.html",
  ],
  [
    "Install the AWS CLI https://docs.aws.amazon.com/cli/latest/userguide/cli-chap-install.html",
  ],
  [
    "Configure aws credentials locally, using awscli. See the documentation for more details on authenticating to AWS.",
    "Would you like this tool to configure your awscli? If no, you will need to do it yourself.",
    false,
  ],
  [
    "Run \`aws configure\` and provide your access key and secret access key.
	- Also make sure you select the same region as the one you created your cost and usage reports in.",
  ],
]
`;

exports[`GuidedInstall AWS without awscli config shows the correct informational messages and documentation references 1`] = `
[
  [
    "Please select an option below to begin guided setup for your Cloud Carbon Footprint app. To complete multiple configuration options (i.e. setup multiple cloud providers), please repeat this script for each additional option. For an understanding of the default configurations and other setup options, please visit the docs on the microsite: https://cloudcarbonfootprint.org/docs/introduction",
  ],
  [
    "AWS setup. See https://cloudcarbonfootprint.org/docs/aws for additional details.",
  ],
  [
    "Your Cloud Carbon Footprint application's configuration has been updated. You can view these settings in the .env files listed above. To complete additional setup (i.e. add an additional cloud provider), please re-run this script. For questions or more configuration options, please visit https://cloudcarbonfootprint.org/docs/introduction",
  ],
  [
    "Please make sure your appConfig object in the client Config file (packages/client/src/Config.ts) includes your cloud provider(s) in the CURRENT_PROVIDERS array",
  ],
]
`;

exports[`GuidedInstall AWS without awscli config shows the correct input prompts for collecting env vars 1`] = `
[
  [
    "Enter AWS account id:",
  ],
  [
    "Enter AWS account name:",
  ],
  [
    "Enter AWS region:",
  ],
  [
    "Enter AWS role name:",
  ],
  [
    "Enter Athena DB name:",
  ],
  [
    "Enter Athena DB table:",
  ],
  [
    "Enter Athena DB query result location (eg s3://your-athena-query-results-location):",
  ],
]
`;

exports[`GuidedInstall Azure shows the correct confirmation prompts for manual instructions 1`] = `
[
  [
    "Register a new Azure Application via your Azure Portal, under “App Registrations”.
	- You do not need to set a Redirect URI or configure platform Settings. Learn more about how to do this here: https://docs.microsoft.com/en-us/azure/active-directory/develop/quickstart-register-app",
  ],
  [
    "Within this application, go to “Certificates and secrets”, and create a new Client secret",
  ],
]
`;

exports[`GuidedInstall Azure shows the correct informational messages and documentation references 1`] = `
[
  [
    "Please select an option below to begin guided setup for your Cloud Carbon Footprint app. To complete multiple configuration options (i.e. setup multiple cloud providers), please repeat this script for each additional option. For an understanding of the default configurations and other setup options, please visit the docs on the microsite: https://cloudcarbonfootprint.org/docs/introduction",
  ],
  [
    "Azure setup. See https://cloudcarbonfootprint.org/docs/azure for additional details.",
  ],
  [
    "Your Cloud Carbon Footprint application's configuration has been updated. You can view these settings in the .env files listed above. To complete additional setup (i.e. add an additional cloud provider), please re-run this script. For questions or more configuration options, please visit https://cloudcarbonfootprint.org/docs/introduction",
  ],
  [
    "Please make sure your appConfig object in the client Config file (packages/client/src/Config.ts) includes your cloud provider(s) in the CURRENT_PROVIDERS array",
  ],
]
`;

exports[`GuidedInstall Azure shows the correct input prompts for collecting env vars 1`] = `
[
  [
    "Enter Azure client id:",
  ],
  [
    "Enter Azure client secret:",
  ],
  [
    "Enter Azure tenant id:",
  ],
]
`;

exports[`GuidedInstall GCP shows the correct confirmation prompts for manual instructions 1`] = `
[
  [
    "Ensure you have a GCP Service Account with the permission to start BigQuery jobs and read BigQuery job results. Learn more about GCP Service Accounts here: https://cloud.google.com/docs/authentication/getting-started",
  ],
  [
    "Create and download a JSON private file for this Service Account to your local filesystem. Learn more about this authentication method at https://cloud.google.com/docs/authentication/getting-started",
  ],
  [
    "Set up Google Cloud billing data to export to BigQuery. You can find the instructions for this at https://cloud.google.com/billing/docs/how-to/export-data-bigquery",
  ],
]
`;

exports[`GuidedInstall GCP shows the correct informational messages and documentation references 1`] = `
[
  [
    "Please select an option below to begin guided setup for your Cloud Carbon Footprint app. To complete multiple configuration options (i.e. setup multiple cloud providers), please repeat this script for each additional option. For an understanding of the default configurations and other setup options, please visit the docs on the microsite: https://cloudcarbonfootprint.org/docs/introduction",
  ],
  [
    "GCP setup. See https://cloudcarbonfootprint.org/docs/gcp for additional details.",
  ],
  [
    "Your Cloud Carbon Footprint application's configuration has been updated. You can view these settings in the .env files listed above. To complete additional setup (i.e. add an additional cloud provider), please re-run this script. For questions or more configuration options, please visit https://cloudcarbonfootprint.org/docs/introduction",
  ],
  [
    "Please make sure your appConfig object in the client Config file (packages/client/src/Config.ts) includes your cloud provider(s) in the CURRENT_PROVIDERS array",
  ],
]
`;

exports[`GuidedInstall GCP shows the correct input prompts for collecting env vars 1`] = `
[
  [
    "Enter the absolute path to your service account private key file:",
  ],
  [
    "Enter GCP Project ID:",
  ],
  [
    "Enter GCP Project Name:",
  ],
  [
    "Enter BigQuery table name:",
  ],
]
`;
